Fixed issues with extra space to the right of the page.

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
 /* Universal Styles */
-* {
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
 
-body {
+
+html, body {
     background-color: hsl(230, 36%, 35%);
     color: hsl(57, 80%, 52%);
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+    font-size: 16px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 
@@ -16,8 +18,9 @@ body {
     background-image: url('images/headerbackground.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center center;
     height: 200px;
+    overflow: hidden;
     z-index: 1;
 
 }
@@ -36,35 +39,39 @@ nav ul {
     display: flex;
     margin: 0 auto;
     justify-content: space-around;
+    text-align: center;
     height: 100px;
-    width: 100%;
+    width: auto;
     padding: .9em;
     font-weight: 700;
 }
 
 nav li {
     list-style-type: none;
+    
 }
 
 /* main content */
 h1 {
     background-color: hsl(230, 17%, 48%);
     text-align: center;
-    width: auto;
+    width: 100%;
     height: 60%;
     padding: 1em;
     font-size: 2rem;
+    overflow: hidden;
 
 }
 
 h3 {
     background-color: hsl(230, 17%, 48%);
     text-align: center;
-    width: auto;
+    width: 100%;
     height: auto;
     padding: 1.5em;
     font-size: 1.5rem;
     font-style: italic;
+    overflow: hidden;
 
 }
 
@@ -79,10 +86,9 @@ h3 {
 
 
 #pizzaImages img {
-    height: 65%;
-    width: 90%;
+
+    width: auto;
     height: 400px;
-    width: 250px;
     margin: 1em;
     flex: 100%;
     flex-wrap: wrap;
@@ -93,10 +99,9 @@ h3 {
 
 
 #otherImages img {
-    height: 65%;
-    width: 90%;
+
+    width: auto;
     height: 400px;
-    width: 250px;
     margin: 1em;
     flex: 100%;
     flex-wrap: wrap;
@@ -137,6 +142,12 @@ h3 {
         width: 100%;
         height: 50%;
         flex: 100%;
+    }
+    nav ul {
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-between;
+        align-content: center;
     }
 
 }
